# Nigeria-tax-calculator-backend

./: Cargo.toml
src/domain/: entities.rs  lexicon.json  ports.rs
src/domain/services/: categorizer.rs
