[package]
name = "tax-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.12.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "rust_decimal", "uuid", "chrono"] }
rust_decimal = "1.32"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
pdf-extract = "0.7"  # Or lopdf
strsim = "0.10"      # For fuzzy matching
ring = "0.17"        # For PIN encryption
